fix: style align-items: stretch;

--- a/components/popup/popup.css
+++ b/components/popup/popup.css
@@ -244,7 +244,7 @@
 }
 .form-dx-texteditor{
     display: flex;
-    align-items: center;
+    align-items: stretch;
 }
 
 .dictionary-setting {
